# longbridge-terminal

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README_zh-CN.md  install
.github/workflows/: release.yml  test.yml
assets/: banner.txt  logo.ascii
crates/cli-candlestick-chart/: Cargo.toml
crates/cli-candlestick-chart/examples/: basic-with-csv-parsing.rs  tui-renderer.rs
crates/cli-candlestick-chart/src/: chart.rs  chart_data.rs  chart_renderer.rs  info_bar.rs  lib.rs  volume_pane.rs
docs/: chinese_localization_checklist_zh-CN.md  faq_zh-CN.md  oncall_cheatsheet_zh-CN.md  ops_governance_zh-CN.md  postmortem_template_zh-CN.md  prd_alert_center_zh-CN.md  product_strategy_zh-CN.md  production_readiness_zh-CN.md  project_positioning_zh-CN.md  quickstart_zh-CN.md  rate_limiting.md  rate_limiting_zh-CN.md  release_runbook_zh-CN.md  render_optimization.md  roadmap_2026Q2_zh-CN.md
locales/: en.yml  zh-CN.yml  zh-HK.yml
scripts/: cargo_audit.sh  check_i18n_guard.py  log_alert_guard.sh  release_preflight.sh
src/: alerts.rs  app.rs  cli.rs  doctor.rs  instance_lock.rs  kline.rs  logger.rs  macros.rs  main.rs  path_env.rs  system.rs  workspace.rs
src/api/: account.rs  login.rs  mod.rs  quote.rs  search.rs
src/data/: mod.rs  stock.rs  stocks.rs  types.rs  user.rs  watchlist.rs  ws.rs
src/helper/: cycle.rs  decimal_ext.rs  mod.rs  number.rs
src/openapi/: context.rs  helpers.rs  mod.rs  rate_limiter.rs  wrapper.rs
src/os/: unix.rs  windows.rs
src/render/: dirty_flags.rs  mod.rs
src/ui/: assets.rs  content.rs  mod.rs  rect.rs  styles.rs  text.rs
src/views/: footer.rs  help.rs  mod.rs  navbar.rs  popup.rs
src/widgets/: ansi.rs  gadget.rs  loading.rs  log_panel.rs  logo.rs  mod.rs  search.rs  terminal.rs
