[package]
name = "cli-candlestick-chart"
version = "0.4.1"
license = "MIT"
description = "A library for displaying candlestick charts right into your terminal."
readme = "README.md"
homepage = "https://github.com/Julien-R44/cli-candlestick-chart"
repository = "https://github.com/Julien-R44/cli-candlestick-chart"
keywords = ["cli", "terminal", "trading", "candlestick", "chart"]
categories = ["command-line-interface", "visualization"]
authors = ["Julien-R44 <julien@ripouteau.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
terminal_size = { version = "0.2.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
clap = { version = "2.34.0", optional = true }
serde_json = { version = "1.0.99", optional = true }
csv = { version = "1.2", optional = true }

[dev-dependencies]
ansi-parser = "0.8.0"
crossterm = "0.26.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tui = "0.19.0"
unicode-width = "0.1.10"

[features]
default = ["terminal_size"]

[[bin]]
name = "cli-candlestick-chart"
path = "src/bin/cli/main.rs"
required-features = ["serde", "serde_json", "csv", "clap"]

[[example]]
name = "basic-with-csv-parsing"
required-features = ["serde", "csv"]

[[example]]
name = "fetch-from-binance"
required-features = ["serde"]

[[example]]
name = "tui-renderer"
